2008-09-09  Heikki Junnila  <hjunnila@users.sf.net>

	* main/fixturemanager.cpp:

	The first fixture is selected in fixture manager by default unless
	something else is wanted.

2008-09-09  Heikki Junnila  <hjunnila@users.sf.net>

	* main/vccuelistproperties.cpp:

	Fixed a crash that occurred when the skip key was detached and then
	delete was attempted in destructor on an already deleted m_keyBind.

2008-09-02  Heikki Junnila  <hjunnila@users.sf.net>

	* main/vcwidget.cpp:

	Fixed VCWidget background color saving/loading.

2008-08-26  Heikki Junnila  <hjunnila@users.sf.net>

	* main/addfixture.cpp:
	* main/addfixture.h:
	* main/fixture.cpp:
	* main/fixture.h:
	* main/fixtureproperties.cpp:
	* main/fixtureproperties.h:
	* main/fixtureproperties.ui:

	Implemented fixture def & mode changing for an existing fixture.
	
2008-08-21  Heikki Junnila  <hjunnila@users.sf.net>

	* main/inputmap.cpp:
	* main/inputmap.h:
	* main/vcslider.cpp:
	* main/vcslider.h:
	* main/vcsliderproperties.cpp:
	* main/vcsliderproperties.ui:

	Implemented preliminary input data acquisition to vcslider.
	
2008-08-18  Heikki Junnila  <hjunnila@users.sf.net>

	* libs/hidinput/hideventdevice.cpp:

	Fixed a segfault in HID plugin deletion (app shutdown).

2008-08-18  Heikki Junnila  <hjunnila@users.sf.net>

	* libs/common/qlcinplugin.h:
	* libs/hidinput/configurehidinput.cpp:
	* libs/hidinput/configurehidinput.h:
	* libs/hidinput/configurehidinput.ui:
	* libs/hidinput/hiddevice.cpp:
	* libs/hidinput/hiddevice.h:
	* libs/hidinput/hideventdevice.cpp:
	* libs/hidinput/hideventdevice.h:
	* libs/hidinput/hidinput.cpp:
	* libs/hidinput/hidinput.h:
	* main/inputmap.cpp:

	Added open() & close() calls to QLCInPlugin interface.

2008-08-17  Heikki Junnila  <hjunnila@users.sf.net>

	* libs/common/qlcinplugin.h:
	* libs/common/qlctypes.h:
	* libs/hidinput/hidinput.cpp:
	* libs/hidinput/hidinput.h:
	* main/app.cpp:
	* main/dmxmap.cpp:
	* main/dmxmap.h:
	* main/inputmap.cpp:
	* main/inputmap.h: