@@ -1,3 +1,13 @@
+2008-09-15  Heikki Junnila  <hjunnila@users.sf.net>
+
+	* libs/midiinput/mididevice.h:
+	* libs/midiinput/midiinput.h:
+	* libs/midiinput/midipoller.h:
+	* libs/midiinput/unix-mididevice.cpp:
+	* libs/midiinput/unix-midiinput.cpp:
+
+	Just small compile-time fixes for midi input plugin.
+
 2008-09-09  Heikki Junnila  <hjunnila@users.sf.net>
 
 	* main/fixturemanager.cpp:
